[package]
name = "rush-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
rush-analyzer = { git = "https://github.com/rush-rs/rush" }
rush-compiler-risc-v = { git = "https://github.com/rush-rs/rush" }
rush-compiler-wasm = { git = "https://github.com/rush-rs/rush" }
rush-compiler-x86-64 = { git = "https://github.com/rush-rs/rush" }
rush-interpreter-vm = { git = "https://github.com/rush-rs/rush" }
rush-interpreter-tree = { git = "https://github.com/rush-rs/rush" }
rush-transpiler-c = { git = "https://github.com/rush-rs/rush" }
rush-parser = { git = "https://github.com/rush-rs/rush" }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
wasm-bindgen = "0.2"
wasmprinter = "0.2.54"
