[package]
name = "rush-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
pretty-hex = "0.3.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
wasm-bindgen = "0.2"
wasmer = { version = "3.1.1", features = ["js-default"], default-features = false }
wasmprinter = "0.2.54"

rush-analyzer = { git = "https://github.com/rush-rs/rush" }
rush-compiler-risc-v = { git = "https://github.com/rush-rs/rush" }
rush-compiler-wasm = { git = "https://github.com/rush-rs/rush" }
rush-compiler-x86-64 = { git = "https://github.com/rush-rs/rush" }
rush-interpreter-tree = { git = "https://github.com/rush-rs/rush" }
rush-interpreter-vm = { git = "https://github.com/rush-rs/rush" }
rush-parser = { git = "https://github.com/rush-rs/rush" }
rush-transpiler-c = { git = "https://github.com/rush-rs/rush" }

lirstings = { git = "https://github.com/rush-rs/lirstings", branch = "generalize" }
tree-sitter-asm = { git = "https://github.com/rush-rs/tree-sitter-asm", default-features = false, features = ["tree-sitter-c2rust"] }
tree-sitter-c = { git = "https://github.com/rush-rs/tree-sitter-c", default-features = false, features = ["tree-sitter-c2rust"] }
tree-sitter-hexdump = { git = "https://github.com/rush-rs/tree-sitter-hexdump", default-features = false, features = ["tree-sitter-c2rust"] }
tree-sitter-wat = { git = "https://github.com/rush-rs/tree-sitter-wasm", default-features = false, features = ["tree-sitter-c2rust"] }

[patch.crates-io]
tree-sitter-c2rust = { git = "https://github.com/shadaj/tree-sitter-c2rust" }
